RESOLVED FIXED82833
[GTK] Toggle buttons do not size appropriately in some themes
https://bugs.webkit.org/show_bug.cgi?id=82833
Summary [GTK] Toggle buttons do not size appropriately in some themes
Martin Robinson
Reported 2012-03-31 10:02:58 PDT
In some GTK+ themes, in particular Adwaita, toggle buttons that are larger than the default size do not render properly. See the attached HTML and screenshot.
Attachments
Large toggles (339 bytes, text/html)
2012-03-31 10:11 PDT, Martin Robinson
no flags
Screenshot of the issue (4.54 KB, image/png)
2012-03-31 10:37 PDT, Martin Robinson
no flags
Patch (14.27 KB, patch)
2012-03-31 12:52 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2012-03-31 10:11:11 PDT
Created attachment 134964 [details] Large toggles
Martin Robinson
Comment 2 2012-03-31 10:37:36 PDT
Created attachment 134966 [details] Screenshot of the issue
Martin Robinson
Comment 3 2012-03-31 12:52:37 PDT
WebKit Review Bot
Comment 4 2012-03-31 12:58:02 PDT
Attachment 134976 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/plat..." exit_code: 1 Source/WebCore/platform/gtk/RenderThemeGtk3.cpp:231: Use 0 instead of NULL. [readability/null] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 5 2012-04-09 11:56:44 PDT
Comment on attachment 134976 [details] Patch Clearing flags on attachment: 134976 Committed r113601: <http://trac.webkit.org/changeset/113601>
WebKit Review Bot
Comment 6 2012-04-09 11:56:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.