[GTK] Toggle buttons do not size appropriately in some themes https://bugs.webkit.org/show_bug.cgi?id=82833

Patch by Martin Robinson <mrobinson@igalia.com> on 2012-04-09
Reviewed by Gustavo Noronha Silva.

Source/WebCore:

Test: platform/gtk/fast/forms/large-toggle-elements.html

Instead of drawing a toggle button across the entire rectangle of
the WebCore control, draw a default-sized one cenetered in the rectangle.

* platform/gtk/RenderThemeGtk3.cpp:
(WebCore::paintToggle): Draw default-sized toggles.

LayoutTests:

Add a test for this issue.

* platform/gtk/fast/forms/large-toggle-elements-expected.png: Added.
* platform/gtk/fast/forms/large-toggle-elements-expected.txt: Added.
* platform/gtk/fast/forms/large-toggle-elements.html: Added.

Canonical link: https://commits.webkit.org/100919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113601 268f45cc-cd09-0410-ab3c-d52691b4dbfc